--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,6 @@
     "@rocketseat/unform": "^1.6.1",
     "axios": "^0.19.0",
     "date-fns": "^2.0.0-beta.5",
-    "date-fns-tz": "^1.0.8",
     "history": "^4.10.1",
     "immer": "^5.0.0",
     "polished": "^3.4.2",
@@ -14,7 +13,6 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-icons": "^3.8.0",
-    "react-perfect-scrollbar": "^1.5.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
@@ -26,6 +24,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.1",
     "styled-components": "^4.4.1",
+    "sweetalert2": "^9.3.0",
     "yup": "^0.27.0"
   },
   "scripts": {
