--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-datepicker": "^2.10.0",
     "react-dom": "^16.11.0",
     "react-icons": "^3.8.0",
