--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-datepicker": "^2.10.0",
     "react-dom": "^16.11.0",
     "react-icons": "^3.8.0",
+    "react-lottie": "^1.2.3",
     "react-number-format": "^4.3.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
